[package]
name = "dreadlock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dreadlock-server"
path = "src/main.rs"

[lib]
name = "dreadlock_lib"
path = "src/lib.rs"

[dependencies]
futures = "0.3.31"
lazy_static = "1.5.0"
once_cell = "1.20.2"
prost = "0.13.3"
rand = "0.8.5"
reqwest = "0.12.9"
sqlite = "0.36.1"
tokio = { version = "1.41.0" , features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
sqlite = "0.36.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
